FIx overflow issue (unnecessary horizontal scroll)

--- a/src/assets/scss/algolia.scss
+++ b/src/assets/scss/algolia.scss
@@ -139,6 +139,7 @@
     padding: 8px 4px 0;
     top: 0;
     z-index: 10;
+    width: 100%;
   }
 
   .command-palette-commands {
